k8s/disease-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: disease-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: disease-api
  template:
    metadata:
      labels:
        component: disease-api
    spec:
      containers:
        - name: disease
          image: antonioalmeidab/disease-api
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: disease-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: disease-api
  ports:
    - port: 4000
      targetPort: 4000
