k8s/patient-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: patient-api
  template:
    metadata:
      labels:
        component: patient-api
    spec:
      containers:
        - name: patient
          image: antonioalmeidab/patient-api
          ports:
           - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: patient-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: patient-api
  ports:
    - port: 3000
      targetPort: 3000
