k8s/query-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: query-api
  template:
    metadata:
      labels:
        component: query-api
    spec:
      containers:
        - name: query
          image: antonioalmeidab/query-api
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: query-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: query-api
  ports:
    - port: 5000
      targetPort: 5000
