k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /patients/?(.*)
            backend:
              serviceName: patient-cluster-ip
              servicePort: 3000
          - path: /disease/?(.*)
            backend:
              serviceName: disease-cluster-ip
              servicePort: 4000
          - path: /query/?(.*)
            backend:
              serviceName: query-cluster-ip
              servicePort: 5000
